<resources>
    <string name="app_name">Perpus SDN 1 Rejomulyo</string>
    <string name="masuk">masuk</string>
    <string name="masuk_dengan_google">Masuk Dengan google</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="email">Email</string>
    <string name="asal_sekolah_mengajar">Asal Sekolah/Mengajar</string>
    <string name="tempat_tanggal_lahir">Tempat Tanggal Lahir</string>
    <string name="daftar">daftar</string>
    <string name="ichwan_sholihin">Ichwan Sholihin</string>
    <string name="guru">Guru</string>
    <string name="buku">buku</string>
    <string name="video">Video</string>
    <string-array name="list_jk">
        <item>Laki</item>
        <item>Perempuan</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="poster">Poster</string>
</resources>