<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img_profile"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_person"
        android:layout_margin="10dp"/>

    <TextView
        android:id="@+id/name_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ichwan_sholihin"
        android:textSize="18sp"
        android:layout_toEndOf="@id/img_profile"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/type_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guru"
        android:textSize="16sp"
        android:layout_toEndOf="@id/img_profile"
        android:layout_below="@id/name_user"
        android:layout_marginTop="5dp"/>

    <Button
        android:id="@+id/btnBuku"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buku"
        android:layout_below="@id/type_user"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"/>

    <Button
        android:id="@+id/btnVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/video"
        android:layout_below="@id/type_user"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="30dp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/btnBuku" />

</RelativeLayout>